Fix: Allow service icon to pop out of card on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1269,6 +1269,7 @@ body {
         border-radius: var(--radius-md);
         position: relative;
         margin-top: 35px;
+        overflow: visible;
     }
 
     .service-icon-3d {
